fix: persistence in tour view works now